小幅提升了像真度
修改了封面和摘要的格式;
微调了行距;
删除了不必要的文件和内容;
增加少量萌新教程;
修复了部分typo，增加了新的typo.

--- a/appendix/acknowledgements.tex
+++ b/appendix/acknowledgements.tex
@@ -5,7 +5,7 @@
 \markboth{致谢}{致谢}
 %\chaptermark{致谢}
 
-% \addcontentsline{toc}{chapter}{\fHei 致谢}
+\addcontentsline{toc}{chapter}{致\hspace{12.5pt}谢}
 
 感谢XXX...
 
