--- a/document.tex
+++ b/document.tex
@@ -62,7 +62,7 @@
 \renewcommand{\baselinestretch}{1}
 \fontsize{12pt}{20pt}\selectfont
 \phantomsection
-\addcontentsline{toc}{chapter}{\fHei 目录}
+\addcontentsline{toc}{chapter}{ \hspace{-0.3em}目\hspace{12.5pt}录}
 \tableofcontents
 %\clearpage
 
@@ -85,7 +85,7 @@
 % 参考文献设置
 \cleardoublepage
 \phantomsection
-\addcontentsline{toc}{chapter}{\fHei 参考文献}
+\addcontentsline{toc}{chapter}{\hspace{-0.3em} 参考文献}
 \sWuhao
 
 % npu专用
@@ -100,8 +100,7 @@
 \input{appendix/appendix.tex}
 \input{appendix/acknowledgements.tex}
 \cleardoublepage
-\input{appendix/design-conclusion.tex}
-\cleardoublepage
+
 
 \clearpage
 \end{document}
