--- a/settings/cover.tex
+++ b/settings/cover.tex
@@ -11,17 +11,15 @@
     				\sSihao （学位研究生）\\
     			}
     		\end{center}
-    		\fSong \sSihao ~ \\
-    		\fSong \sSihao ~ \\
-    		\fSong \sSihao ~ \\
-    		\fSong \sSihao ~ \\
-    		\fSong \sSihao ~ \\	
-    		\begin{spacing}{1.5}
+    		
+			\vskip 5cm
+    		
     			
-    			\sErhao \fSong \hspace{1em} 题目: ~~\underline{XXXXXXXX}\\
+			\sErhao \fSong \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{关于研究生学位论文命名方法的}\\
+			%\vskip 1.7cm
+			\hspace{3.5cm}\coverunderline[11cm]{关键技术研究}    			
     			
-    			\sErhao \fSong \hspace{1em}  ~~~ \underline{XXXX}
-    		\end{spacing}
+    		
     		\fSong \sWuhao ~ \\
     		\fSong \sWuhao ~ \\
     		\fSong \sWuhao ~ \\
@@ -30,9 +28,9 @@
     		\fSong \sWuhao ~ \\
     		{
     			\sSanhao\fSong 
-    			作~~~~~~者：\coverunderline[5.5cm]{XXXX}\\
-    			\sSanhao\fSong 学科专业：\coverunderline[5.5cm]{XXXX}\\
-    			\sSanhao\fSong 指导教师：\coverunderline[5.5cm]{XXX}
+    			作\hspace{32pt}者：\coverunderline[5.5cm]{哦}\\
+    			\sSanhao\fSong 学科专业：\coverunderline[5.5cm]{看文档找规律专业}\\
+    			\sSanhao\fSong 指导教师：\coverunderline[5.5cm]{自学成才}
     			
     		}
     		\fSong \sWuhao ~ \\
