--- a/preface/c_abstract.tex
+++ b/preface/c_abstract.tex
@@ -1,25 +1,29 @@
 \renewcommand{\baselinestretch}{1.5}
-\fontsize{12pt}{13pt}\selectfont
 
+\sRealHalfXiaosi
 \chapter[摘要]{摘~~~~要}
 \markboth{摘~要}{摘~要}
+西北工业大学（简称西工大）坐落于陕西西安，是我国唯一一所以同时发展航空、航天、航海（三航）工程教育和科学研究为特色的多科性、研究型、开放式大学，现隶属于工业和信息化部。新中国成立以来，西工大一直是国家重点建设的高校，1960年被国务院确定为全国重点大学，“七五”、“八五”均被国务院列为重点建设的全国15所大学之一，是全国首批设立研究生院的22所高校之一，1995年首批进入“211工程”，2001年进入“985工程”，是“卓越大学联盟”成员高校，先后获得“全国文明单位”、“全国创先争优先进基层党组织”和“全国毕业生就业典型高校”等荣誉称号和表彰奖励。学校秉承“公诚勇毅”校训，弘扬“三实一新”（基础扎实、工作踏实、作风朴实、开拓创新）校风，扎根西部、献身国防，历史上书写了新中国多个“第一”，今天在创建一流大学和一流学科上续写新的辉煌。
 
-刀具磨损量的精准监测和预报对于保证产品加工质量、提升生产力和降低成本具有非常重要的意义。本文对于加工时产生的信号进行分析，建立基于刀具磨损状态的监测和退化模型，为刀具的高效应用和产品质量的保证提供依据。本文完成的主要研究工作如下：
+西北工业大学（简称西工大）坐落于陕西西安，是我国唯一一所以同时发展航空、航天、航海（三航）工程教育和科学研究为特色的多科性、研究型、开放式大学，现隶属于工业和信息化部。新中国成立以来，西工大一直是国家重点建设的高校，1960年被国务院确定为全国重点大学，“七五”、“八五”均被国务院列为重点建设的全国15所大学之一，是全国首批设立研究生院的22所高校之一，1995年首批进入“211工程”，2001年进入“985工程”，是“卓越大学联盟”成员高校，先后获得“全国文明单位”、“全国创先争优先进基层党组织”和“全国毕业生就业典型高校”等荣誉称号和表彰奖励。学校秉承“公诚勇毅”校训，弘扬“三实一新”（基础扎实、工作踏实、作风朴实、开拓创新）校风，扎根西部、献身国防，历史上书写了新中国多个“第一”，今天在创建一流大学和一流学科上续写新的辉煌。
 
+综上, 本文主要做的工作有
+\vspace{-10pt}
 \begin{enumerate}
-	\item 单工况下基于\gls{resnet_zh}的刀具磨损在线监测和基于\gls{rnn_zh}的未来预报\\
-	采集加工时由三轴力、三轴加速度和一个声发射传感器所采集的信号，进行小波变换并作为\gls{resnet_zh}的输入数据，构建在单工况下的刀具在线磨损量监测模型，从而监测实时磨损量。分别将历史和未来磨损量进行编码，构建基于刀具磨损量退化的基于\gls{lstm_zh}单元的\gls{rnn_zh}模型，从而实现较宽范围内的刀具未来磨损量预报。
-	\item 多工况下刀具磨损数据修复，在线监测及其迁移学习技术\\
-	使用过拟合的\gls{rf_zh}针对多工况下的数据进行标签修复。采集不同工况下的加工工件信号和对应的工况信息，使用相应的编码方式作为\gls{resnet_zh}的隐空间，从而实现由一个模型针对多种工况的综合在线监测技术。
-	\item 基于\gls{tda_zh}的深度学习模型的可视化技术\\
-	使用\gls{tsne_zh}针对\gls{resnet_zh}中高维卷积核进行\gls{pca_zh}，接着使用\gls{dbscan_zh}和\gls{hdbscan_zh}针对降维后的主成分进行\gls{tda_zh}，从而获得核心特征的分布规律，真实的反应卷积层工作过程，并且能够评估深度学习模型的性能，提高了现有深度学习模型的学习透明性、可视化和可解释性。
+\setlength{\itemsep}{0pt}
+    \item 分析 A
+    \item 分析 B
+    \item 提出 C
+    \item 提出 D
+    \item 提出 E
 \end{enumerate}
 
-通过实验数据验证和与同行的对比，本论文提出的方法可以非常准确的监测刀具实时磨损量，并且能够复用多个工况下的信号特征进行监测，同时首次完成了针对刀具磨损未来量的多尺度时间下的预报问题，对深度学习模型进行了分析，揭示了其工作过程和特点。
-\vspace{-10pt}
+\vskip 30pt
 
-\vspace{1em}
-\noindent {\fHei 关键词：} \quad 刀具磨损量, 深度学习, 在线监测, 未来趋势预报, 可视化技术
+\noindent {\fHei 关键词：} \quad 学位论文, 模板, \LaTeX
+
+\fontsize{10.5pt}{20pt}\selectfont
+\noindent 本研究得到玄学基金（编号23336666）资助。
 
 \clearpage
 \endinput
