--- a/settings/eng_cover.tex
+++ b/settings/eng_cover.tex
@@ -12,10 +12,10 @@
     		\fSong \sXiaoer ~ \\
     		\fSong \sXiaoer ~ \\
     		\fTNR \sXiaosan \textbf{By}\\
-    		\fTNR \sXiaosan \textbf{XXXXXX}\\
+    		\fTNR \sXiaosan \textbf{OvO}\\
     		\fSong \sXiaosan ~ \\
     		\fTNR \sXiaosan \textbf{Under the Supervision of Professor}\\
-    		\fTNR \sXiaosan \textbf{XXXX}
+    		\fTNR \sXiaosan \textbf{Myself}
     		\fSong \sSanhao ~ \\
     		\fSong \sSanhao ~ \\
     		\fSong \sSanhao ~ \\
@@ -26,7 +26,7 @@
     		\fTNR In partial fulfillment of the requirement \\
 			\fTNR For the degree of \\
 			%% please change to PHD if you want
-    		\fTNR Master/Doctor of \textbf{Aeronautical and Astronautical Manufacturing Engineering}
+    		\fTNR Master/Doctor of \textbf{Metaphysics}
     		\fSong \sXiaosan ~\\
     		\fSong \sXiaosan ~\\
     		\fSong \sXiaosan ~\\
