修正目录中章节的标号.

--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -177,7 +177,7 @@
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{2}
 
-\newcommand\chapterID[1]{第\CJKnumber{#1}章}
+%\newcommand\chapterID[1]{第\CJKnumber{#1}章}
 \renewcommand{\chaptername}{\thechapter~~}
 \renewcommand{\figurename}{图}
 \renewcommand{\tablename}{表}
@@ -206,7 +206,7 @@
 \dottedcontents{subsection}[2.00cm]{}{2.7em}{5pt}
 \dottedcontents{subsubsection}[2.86cm]{}{3.4em}{5pt}
 \titlecontents{chapter}[0pt]{\fSong \sRealHalfXiaosi \vspace{0.5em}}%
-    {\contentsmargin{0pt}\fSong\makebox[0pt][l]{\chapterID{\thecontentslabel}}\hspace{3.8em}}%
+    {\contentsmargin{0pt}\fSong\makebox[0pt][l]{\thecontentslabel}\hspace{1.5em}}%
     {\contentsmargin{0pt}\fSong}%
     {\titlerule*[.5pc]{.}\contentspage}[\vspace{0em}]
 %------------------------------------------------------------------------------%
