英文摘要目录加粗

--- a/preface/e_abstract.tex
+++ b/preface/e_abstract.tex
@@ -1,7 +1,7 @@
 \renewcommand{\baselinestretch}{1.5}
 
 \sRealHalfXiaosi
-\chapter[ABSTRACT]{Abstract}
+\chapter[\textbf{ABSTRACT}]{Abstract}
 \markboth{Abstract}{ABSTRACT}
 
 \noindent \blindtext
