小幅提升了像真度

--- a/appendix/acknowledgements.tex
+++ b/appendix/acknowledgements.tex
@@ -2,8 +2,8 @@
 \fontsize{12pt}{13pt}\selectfont
 \phantomsection
 \chapter*{致~~~~谢}
-\markboth{致谢}{致谢}
-%\chaptermark{致谢}
+\markboth{致~~~~谢}{致~~~~谢}
+
 
 \addcontentsline{toc}{chapter}{致\hspace{12.5pt}谢}
 
