--- a/settings/cover.tex
+++ b/settings/cover.tex
@@ -15,9 +15,9 @@
 			\vskip 5cm
     		
     			
-			\sErhao \fSong \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{关于研究生学位论文命名方法的}\\
+			\sErhao \fSong \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{基于导师喜好的研究生学位论文}\\
 			%\vskip 1.7cm
-			\hspace{3.5cm}\coverunderline[11cm]{关键技术研究}    			
+			\hspace{3.5cm}\coverunderline[11cm]{命名方法的关键技术研究}    			
     			
     		
     		\fSong \sWuhao ~ \\
