--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -1,9 +1,7 @@
 \phantomsection
 \chapter*{附~~~~录}
-
 \addcontentsline{toc}{chapter}{附\hspace{12.5pt}录}
-
+\markboth{附~~~~录}{}
 这是一份附录，请放置一些独立的证明、源代码、或其他辅助资料。
-
-\clearpage
+\cleardoublepage
 \endinput
