小幅提升了像真度

--- a/appendix/acknowledgements.tex
+++ b/appendix/acknowledgements.tex
@@ -3,9 +3,7 @@
 \phantomsection
 \chapter*{致~~~~谢}
 \markboth{致~~~~谢}{致~~~~谢}
-
-
-\addcontentsline{toc}{chapter}{致\hspace{12.5pt}谢}
+\addcontentsline{toc}{chapter}{致~~~~谢}
 
 感谢XXX...
 
