--- a/appendix/mywork.tex
+++ b/appendix/mywork.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{攻读硕士学位期间发表的学术论文和参加科研情况}
 \markboth{攻读硕士学位期间发表的学术论文和参加科研情况}{}
 
-[1]	Shen S,Wang Z,Zhang W.{{\LaTeX}}-Template-For-NPU-Thesis[Z].2016.(No Index)
+[1]	Shen S, Wang Z, Zhang J et al.{{\LaTeX}}-Template-For-NPU-Thesis[Z].2016.(No Index)
 
 \clearpage
 \endinput
