--- a/document.tex
+++ b/document.tex
@@ -32,7 +32,7 @@
 \phantom{s}
 \clearpage
 \renewcommand{\baselinestretch}{1.2}
-\input{settings/eng_cover.tex} 
+\input{settings/eng_cover.tex}
 
 \newpage
 \clearpage
@@ -62,7 +62,7 @@
 \renewcommand{\baselinestretch}{1}
 \fontsize{12pt}{20pt}\selectfont
 \phantomsection
-\addcontentsline{toc}{chapter}{ \hspace{-0.3em}目\hspace{12.5pt}录}
+\addcontentsline{toc}{chapter}{目~~~~录}
 \tableofcontents
 %\clearpage
 
@@ -85,7 +85,7 @@
 % 参考文献设置
 \cleardoublepage
 \phantomsection
-\addcontentsline{toc}{chapter}{\hspace{-0.3em} 参考文献}
+\addcontentsline{toc}{chapter}{参考文献}
 \sWuhao
 
 % npu专用A
@@ -94,8 +94,7 @@
 % 参考文献位置
 \bibliography{references/reference}
 %\clearpage
- \sRealHalfXiaosi
-
+\sRealHalfXiaosi
 
 
 % 附录
@@ -103,7 +102,7 @@
 \cleardoublepage
 \input{appendix/appendix.tex}
 \input{appendix/acknowledgements.tex}
-\setlength{\parindent}{0pt}  
+\setlength{\parindent}{0pt}
 \input{appendix/mywork.tex}
 \cleardoublepage
 \phantomsection
