--- a/settings/eng_cover.tex
+++ b/settings/eng_cover.tex
@@ -1,41 +1,41 @@
 \begin{titlepage}
 	\fTNR
-    \begin{spacing}{1.2}
-    	\begin{center}
-    		\renewcommand{\baselinestretch}{1.2}
-    		\renewcommand{\captionfont}{\linespread{1.2}\normalsize}
-    		\setmainfont{\TNRFag}
-    		\sSanhao ~ \\
-    		\sSanhao ~ \\
-    		\fTNR \sErhao  \textbf{In-process Cutting Tool Wear Monitoring and Forecasting Based on Deep Learning Technology}
-    		\fSong \sXiaoer ~ \\
-    		\fSong \sXiaoer ~ \\
-    		\fSong \sXiaoer ~ \\
-    		\fTNR \sXiaosan \textbf{By}\\
-    		\fTNR \sXiaosan \textbf{OvO}\\
-    		\fSong \sXiaosan ~ \\
-    		\fTNR \sXiaosan \textbf{Under the Supervision of Professor}\\
-    		\fTNR \sXiaosan \textbf{Myself}
-    		\fSong \sSanhao ~ \\
-    		\fSong \sSanhao ~ \\
-    		\fSong \sSanhao ~ \\
-    		\fSong \sSanhao ~ \\
-    		\fTNR \sXiaosan A Dissertation Submitted to\\
-    		\fTNR \sXiaosan Northwestern Polytechnical University \\
-    		\fSong \sSanhao ~ \\
-    		\fTNR In partial fulfillment of the requirement \\
+	\begin{spacing}{1.2}
+		\begin{center}
+			\renewcommand{\baselinestretch}{1.2}
+			\renewcommand{\captionfont}{\linespread{1.2}\normalsize}
+			\setmainfont{\defaultEngFont}
+			\sSanhao ~ \\
+			\sSanhao ~ \\
+			\fTNR \sErhao  \textbf{Raz, Raz, Raz-Dva-Tri. March Forward like a True Russian}
+			\fSong \sXiaoer ~ \\
+			\fSong \sXiaoer ~ \\
+			\fSong \sXiaoer ~ \\
+			\fTNR \sXiaosan \textbf{By}\\
+			\fTNR \sXiaosan \textbf{OvO}\\
+			\fSong \sXiaosan ~ \\
+			\fTNR \sXiaosan \textbf{Under the Supervision of Professor}\\
+			\fTNR \sXiaosan \textbf{Myself}
+			\fSong \sSanhao ~ \\
+			\fSong \sSanhao ~ \\
+			\fSong \sSanhao ~ \\
+			\fSong \sSanhao ~ \\
+			\fTNR \sXiaosan A Dissertation Submitted to\\
+			\fTNR \sXiaosan Northwestern Polytechnical University \\
+			\fSong \sSanhao ~ \\
+			\fTNR In partial fulfillment of the requirement \\
 			\fTNR For the degree of \\
 			%% please change to PHD if you want
-    		\fTNR Master/Doctor of \textbf{Metaphysics}
-    		\fSong \sXiaosan ~\\
-    		\fSong \sXiaosan ~\\
-    		\fSong \sXiaosan ~\\
-    		\fSong \sXiaosan ~\\
-    		\fTNR \sXiaosan Xi'an, P.R. China \\
-    		\fTNR \sXiaosan March 2020
-    	\end{center}
-    \end{spacing}
-    
+			\fTNR Master/Doctor of \textbf{Metaphysics}
+			\fSong \sXiaosan ~\\
+			\fSong \sXiaosan ~\\
+			\fSong \sXiaosan ~\\
+			\fSong \sXiaosan ~\\
+			\fTNR \sXiaosan Xi'an, P.R. China \\
+			\fTNR \sXiaosan March 2020
+		\end{center}
+	\end{spacing}
+
 \end{titlepage}
 \fSong \normalsize
 
