小幅提升了像真度
增加目录中“摘要”之间的空格；
页眉线改为双线

--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -231,7 +231,9 @@
 %\addtolength{\footskip}{-0.1cm}         %页脚位置
 \addtolength{\topmargin}{0.5cm}
 \newcommand{\makeheadrule}{
-    \makebox[0pt][l]{\rule[.7\baselineskip]{\headwidth}{0.8pt}}
+    \makebox[0pt][l]{\rule[.7\baselineskip]{\headwidth}{3.4pt}}
+    \vskip-1.07\baselineskip
+    \rule[.5\baselineskip]{\headwidth}{0.6pt}
     \vskip-.8\baselineskip
 }
 \makeatletter
