更新了正文中的标题行距
#9

--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -209,8 +209,8 @@
 
 % 缩小正文中各级标题之间的缩进
 \titlespacing{\chapter}{0pt}{-3ex plus .1ex minus .2ex}{0.25em}
-\titlespacing{\section}{0pt}{-0.2em}{0em}
-\titlespacing{\subsection}{0pt}{0.5em}{0em}
+\titlespacing{\section}{0pt}{7pt}{0em}
+\titlespacing{\subsection}{0pt}{6.5pt}{0em}
 \titlespacing{\subsubsection}{0pt}{0.25em}{0pt}
 
 % 定义目录中各级标题之间的格式以及缩进
