--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -208,7 +208,7 @@
 {(\arabic{subsubsection})}{0.5em}{}{}   % 小标题式的subsubsection:(4) 标题
 
 % 缩小正文中各级标题之间的缩进
-\titlespacing{\chapter}{0pt}{-3ex plus .1ex minus .2ex}{0.25em}
+\titlespacing{\chapter}{0pt}{12pt}{12pt}
 \titlespacing{\section}{0pt}{7pt}{0em}
 \titlespacing{\subsection}{0pt}{6.5pt}{0em}
 \titlespacing{\subsubsection}{0pt}{0.25em}{0pt}
