--- a/preface/c_abstract.tex
+++ b/preface/c_abstract.tex
@@ -1,8 +1,9 @@
-\renewcommand{\baselinestretch}{1.5}
+%\renewcommand{\baselinestretch}{1.25}
 
-\sRealHalfXiaosi
+\sNormalParagraph
 \chapter[摘~~~~要]{摘~~~~要}
 \markboth{摘~要}{摘~要}
+
 西北工业大学（简称西工大）坐落于陕西西安，是我国唯一一所以同时发展航空、航天、航海（三航）工程教育和科学研究为特色的多科性、研究型、开放式大学，现隶属于工业和信息化部。新中国成立以来，西工大一直是国家重点建设的高校，1960年被国务院确定为全国重点大学，“七五”、“八五”均被国务院列为重点建设的全国15所大学之一，是全国首批设立研究生院的22所高校之一，1995年首批进入“211工程”，2001年进入“985工程”，是“卓越大学联盟”成员高校，先后获得“全国文明单位”、“全国创先争优先进基层党组织”和“全国毕业生就业典型高校”等荣誉称号和表彰奖励。学校秉承“公诚勇毅”校训，弘扬“三实一新”（基础扎实、工作踏实、作风朴实、开拓创新）校风，扎根西部、献身国防，历史上书写了新中国多个“第一”，今天在创建一流大学和一流学科上续写新的辉煌。
 
 西北工业大学（简称西工大）坐落于陕西西安，是我国唯一一所以同时发展航空、航天、航海（三航）工程教育和科学研究为特色的多科性、研究型、开放式大学，现隶属于工业和信息化部。新中国成立以来，西工大一直是国家重点建设的高校，1960年被国务院确定为全国重点大学，“七五”、“八五”均被国务院列为重点建设的全国15所大学之一，是全国首批设立研究生院的22所高校之一，1995年首批进入“211工程”，2001年进入“985工程”，是“卓越大学联盟”成员高校，先后获得“全国文明单位”、“全国创先争优先进基层党组织”和“全国毕业生就业典型高校”等荣誉称号和表彰奖励。学校秉承“公诚勇毅”校训，弘扬“三实一新”（基础扎实、工作踏实、作风朴实、开拓创新）校风，扎根西部、献身国防，历史上书写了新中国多个“第一”，今天在创建一流大学和一流学科上续写新的辉煌。
