--- a/preface/e_abstract.tex
+++ b/preface/e_abstract.tex
@@ -1,6 +1,6 @@
-\renewcommand{\baselinestretch}{1.5}
+%\renewcommand{\baselinestretch}{1.5}
 
-\sRealHalfXiaosi
+\sNormalParagraph
 \chapter[\textbf{ABSTRACT}]{Abstract}
 \markboth{Abstract}{ABSTRACT}
 
@@ -9,7 +9,7 @@
 \noindent \blindtext
 
 \noindent To sum up, this paper works on those
-\vspace{-12pt}
+\vspace{-10pt}
 \begin{enumerate} \setlength{\itemsep}{0pt}
     \item Balabala 1
     \item Balabala 12
