--- a/settings/cover.tex
+++ b/settings/cover.tex
@@ -1,45 +1,32 @@
 \begin{titlepage}
-	
-    \sSanhao ~
-    \begin{spacing}{1.5}
-    	\begin{center}
-    		\begin{center}
-    			{
-    				
-    				\sSanhao 西~北~工~业~大~学 \\
-    				\sYihao 硕~士~学~位~论~文 \\
-    				\sSihao （学位研究生）\\
-    			}
-    		\end{center}
-    		
+	\sSanhao ~
+	\begin{spacing}{1.5}
+		\begin{center}
+			\begin{center}
+				\sSanhao 西~北~工~业~大~学 \\
+				\sYihao 硕~士~学~位~论~文 \\
+				\sSihao （学位研究生）\\
+			\end{center}
 			\vskip 5cm
-    		
-    			
-			\sErhao \fSong \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{基于导师喜好的研究生学位论文}\\
-			%\vskip 1.7cm
-			\hspace{3.5cm}\coverunderline[11cm]{命名方法的关键技术研究}    			
-    			
-    		
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		{
-    			\sSanhao\fSong 
-    			作\hspace{32pt}者：\coverunderline[5.5cm]{哦}\\
-    			\sSanhao\fSong 学科专业：\coverunderline[5.5cm]{看文档找规律专业}\\
-    			\sSanhao\fSong 指导教师：\coverunderline[5.5cm]{自学成才}
-    			
-    		}
-    		\fSong \sWuhao ~ \\
-    		\fSong \sWuhao ~ \\
-    		\fSong \sSanhao \fTNR{20XX}\fSong 年\fTNR{X} \fSong 月
-    	\end{center}
-    \end{spacing}
-    
+			\fSong \sErhao \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{基于导师喜好的研究生学位论文} \\
+			\hspace{1em} \phantom{大空格}\hspace{0.2cm}\coverunderline[11cm]{命名方法的关键技术研究} \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\sSanhao 作\phantom{空格}者：\coverunderline[5.5cm]{哦} \\
+			\sSanhao 学科专业：\coverunderline[5.5cm]{看文档找规律专业} \\
+			\sSanhao 指导教师：\coverunderline[5.5cm]{自学成才} \\
+			\fSong \sWuhao ~ \\
+			\fSong \sWuhao ~ \\
+			\fSong \sSanhao \fTNR{20XX}\fSong 年\fTNR{X} \fSong 月
+		\end{center}
+	\end{spacing}
 \end{titlepage}
+
 \fSong \normalsize
 
 \endinput
