--- a/settings/eng_cover.tex
+++ b/settings/eng_cover.tex
@@ -7,7 +7,7 @@
 			\setmainfont{\defaultEngFont}
 			\sSanhao ~ \\
 			\sSanhao ~ \\
-			\fTNR \sErhao  \textbf{Raz, Raz, Raz-Dva-Tri. March Forward like a True Russian}
+			\fTNR \sErhao \textbf{Раз, Раз, раз, два, три. March Forward like a True Russian}
 			\fSong \sXiaoer ~ \\
 			\fSong \sXiaoer ~ \\
 			\fSong \sXiaoer ~ \\
@@ -27,12 +27,12 @@
 			\fTNR For the degree of \\
 			%% please change to PHD if you want
 			\fTNR Master/Doctor of \textbf{Metaphysics}
-			\fSong \sXiaosan ~\\
-			\fSong \sXiaosan ~\\
-			\fSong \sXiaosan ~\\
-			\fSong \sXiaosan ~\\
+			\fSong \sXiaosan ~ \\
+			\fSong \sXiaosan ~ \\
+			\fSong \sXiaosan ~ \\
+			\fSong \sXiaosan ~ \\
 			\fTNR \sXiaosan Xi'an, P.R. China \\
-			\fTNR \sXiaosan March 2020
+			\fTNR \sXiaosan March 20XX
 		\end{center}
 	\end{spacing}
 
