rename cover.tex into frontpage_chs.tex

--- a/settings/frontpage_chs.tex
+++ b/settings/frontpage_chs.tex
@@ -17,7 +17,7 @@
 			\fSong \sWuhao ~ \\
 			\fSong \sWuhao ~ \\
 			\fSong \sWuhao ~ \\
-			\sSanhao 作\phantom{空格}者：\coverunderline[5.5cm]{哦} \\
+			\sSanhao 作\phantom{空格}者：\coverunderline[5.5cm]{\authorname} \\
 			\sSanhao 学科专业：\coverunderline[5.5cm]{看文档找规律专业} \\
 			\sSanhao 指导教师：\coverunderline[5.5cm]{自学成才} \\
 			\fSong \sWuhao ~ \\
