rename eng_cover.tex into frontpage_eng.tex

--- a/settings/frontpage_eng.tex
+++ b/settings/frontpage_eng.tex
@@ -12,7 +12,7 @@
 			\fSong \sXiaoer ~ \\
 			\fSong \sXiaoer ~ \\
 			\fTNR \sXiaosan \textbf{By}\\
-			\fTNR \sXiaosan \textbf{OvO}\\
+			\fTNR \sXiaosan \textbf{\authorname}\\
 			\fSong \sXiaosan ~ \\
 			\fTNR \sXiaosan \textbf{Under the Supervision of Professor}\\
 			\fTNR \sXiaosan \textbf{Myself}
@@ -35,8 +35,8 @@
 			\fTNR \sXiaosan March 20XX
 		\end{center}
 	\end{spacing}
-
 \end{titlepage}
+
 \fSong \normalsize
 
 \endinput
