--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -32,6 +32,7 @@
 \usepackage{gensymb}
 \usepackage[final]{pdfpages}
 \usepackage{setspace}
+\usepackage{ulem}
 \usepackage{ragged2e}
 %------------------------------------------------------------------------------%
 
