--- a/references/reference.bib
+++ b/references/reference.bib
@@ -1,36 +1,40 @@
 @misc{NWPUThesisLaTeXTemplate,
-    title={{{\LaTeX}}-Template-For-NPU-Thesis},
-    author={Shangkun Shen and Zhihe Wang and Jiduo Zhang and Weijia Zhang},
-    year={2016},
-    month={05}
+  title  = {{{\LaTeX}}-Template-For-NPU-Thesis},
+  author = {Shangkun Shen and Zhihe Wang and Jiduo Zhang and Weijia Zhang},
+  year   = {2016},
+  month  = {05}
 }
 
 @book{knuth1986the,
-    title={The {{\TeX}}book},
-    author={Knuth, Donald E},
-    publisher={Addison-Wesley},
-    year={1986}
+  title     = {The {{\TeX}}book},
+  author    = {Knuth, Donald E},
+  publisher = {Addison-Wesley},
+  year      = {1986}
 }
 
 @book{lamport1989latex:,
-    title={{{\LaTeX}}: a document preparation system},
-    author={Lamport, Leslie},
-    publisher={Addison-Wesley Professional},
-    year={1989}
+  title     = {{{\LaTeX}}: a document preparation system},
+  author    = {Lamport, Leslie},
+  publisher = {Addison-Wesley Professional},
+  year      = {1989}
 }
 
 
 @article{szegedy2015going,
-    title={Going deeper with convolutions},
-    author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott E and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-    journal={computer vision and pattern recognition},
-    pages={1--9},
-    year={2015}
+  title   = {Going deeper with convolutions},
+  author  = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott E and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  journal = {computer vision and pattern recognition},
+  pages   = {1--9},
+  year    = {2015}
 }
 
-@misc{MathSymbolsinLaTeXbypolossk,
-    title={Math-Symbols-in-{{\LaTeX}}},
-    author={Shangkun Shen},
-    year={2017},
-    month={10}
+@software{MathSymbolsinLaTeXbypolossk,
+  title     = {Math Symbols in {{\LaTeX}}},
+  author    = {Shangkun Shen},
+  year      = {2017},
+  month     = {10},
+  publisher = {Zenodo},
+  journal   = {GitHub repository},
+  doi       = {10.5281/zenodo.4120375},
+  url       = {https://doi.org/10.5281/zenodo.4120375}
 }
