--- a/references/reference.bib
+++ b/references/reference.bib
@@ -1,8 +1,12 @@
-@misc{NWPUThesisLaTeXTemplate,
-  title  = {{{\LaTeX}}-Template-For-NPU-Thesis},
-  author = {Shangkun Shen and Zhihe Wang and Jiduo Zhang and Weijia Zhang},
-  year   = {2016},
-  month  = {05}
+@software{NWPUThesisLaTeXTemplate,
+  title     = {Yet Another {{\LaTeX}} Template for NPU Thesis},
+  author    = {Shangkun Shen and Zhihe Wang and Jiduo Zhang and Weijia Zhang},
+  month     = {11},
+  year      = {2019},
+  publisher = {Zenodo},
+  journal   = {GitHub repository},
+  doi       = {10.5281/zenodo.4159248},
+  url       = {https://doi.org/10.5281/zenodo.4159248}
 }
 
 @book{knuth1986the,
