replace vspace to real styled lines for better fidelity

--- a/frontmatter/abstract_chs.tex
+++ b/frontmatter/abstract_chs.tex
@@ -23,6 +23,7 @@
 
 \noindent {\fHei 关键词：} \quad 学位论文, 模板, \LaTeX
 
+\vfill
 \fontsize{10.5pt}{20pt}\selectfont
 \noindent 本研究得到玄学基金（编号23336666）资助。
 
