--- a/frontmatter/frontpage_chs.tex
+++ b/frontmatter/frontpage_chs.tex
@@ -7,7 +7,11 @@
 				\sYihao 硕~士~学~位~论~文 \\
 				\sSihao （学位研究生）\\
 			\end{center}
-			\vskip 5cm
+			\fSong \sSihao ~ \\
+			\fSong \sSihao ~ \\
+			\fSong \sSihao ~ \\
+			\fSong \sSihao ~ \\
+			\fSong \sSihao ~ \\
 			\fSong \sErhao \hspace{1em} 题目：\hspace{0.2cm}\coverunderline[11cm]{基于导师喜好的研究生学位论文} \\
 			\hspace{1em} \phantom{大空格}\hspace{0.2cm}\coverunderline[11cm]{命名方法的关键技术研究} \\
 			\fSong \sWuhao ~ \\
