add list of tables and figures to resolve #15

--- a/document.tex
+++ b/document.tex
@@ -65,6 +65,19 @@
 \tableofcontents
 \cleardoublepage
 %------------------------------------------------------------------------------%
+% 图目录与表目录 学校并未要求                                                  %
+%------------------------------------------------------------------------------%
+\sNormalParagraph
+\phantomsection
+\addcontentsline{toc}{chapter}{图目录}        % 图目录
+\listoffigures
+\cleardoublepage
+\sNormalParagraph
+\phantomsection
+\addcontentsline{toc}{chapter}{表目录}        % 表目录
+\listoftables
+\cleardoublepage
+%------------------------------------------------------------------------------%
 % 正文                                                                         %
 %------------------------------------------------------------------------------%
 \mainmatter
