--- a/references/reference.bib
+++ b/references/reference.bib
@@ -42,3 +42,14 @@
   doi       = {10.5281/zenodo.4120375},
   url       = {https://doi.org/10.5281/zenodo.4120375}
 }
+
+@article{npuSource,
+	title="脉源三支 强强融合——西北工业大学",
+	author=" {陈家忠}",
+	journal="电子技术与软件工程",
+	number="9",
+	pages="15--16",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1129571904",
+	year="2014"
+}
+
