--- a/settings/thesis-setting.tex
+++ b/settings/thesis-setting.tex
@@ -194,6 +194,8 @@
 \renewcommand{\tablename}{表}
 \renewcommand{\bibname}{参考文献}
 \renewcommand{\contentsname}{目~~~~录}
+\renewcommand{\listfigurename}{图目录}
+\renewcommand{\listtablename}{表目录}
 \newcommand{\keywords}[1]{\\ \\ \textbf{关~键~词}：#1}
 % 标题格式
 \titleformat{\chapter}[hang]{\normalfont\sSanhao\filcenter\fHei\bf}{%
