--- a/frontmatter/coverpage.tex
+++ b/frontmatter/coverpage.tex
@@ -42,12 +42,12 @@
 		% \par\vspace{9cm}
 		\fSong\sErhao
 		\begin{minipage}[t]{2cm}
-			\hfill 题目 \\
+			\hfill {\bfseries \sYihao 题目} \\
 		\end{minipage}
 		\setbox123=\hbox{
 			\begin{minipage}[t]{12cm}
 				\begin{center}
-					\fHei 基于导师喜好的研究生学位论文 \\
+					\fHei \sErhao 基于导师喜好的研究生学位论文 \\
 					命名方法的关键技术研究
 				\end{center}
 			\end{minipage} }
