add author name in English to fix English cover, fix #22

--- a/document.tex
+++ b/document.tex
@@ -18,6 +18,7 @@
 %------------------------------------------------------------------------------%
 \title{基于XXXX的XXXX}
 \newcommand{\authorname}{OvO}
+\newcommand{\authornameInEnglish}{O,vO}
 \author{\authorname}
 \date{20XX年X月}
 %------------------------------------------------------------------------------%
