--- a/frontmatter/frontpage_eng.tex
+++ b/frontmatter/frontpage_eng.tex
@@ -12,7 +12,7 @@
 			\fSong \sXiaoer ~ \\
 			\fSong \sXiaoer ~ \\
 			\fTNR \sXiaosan \textbf{By}\\
-			\fTNR \sXiaosan \textbf{\authorname}\\
+			\fTNR \sXiaosan \textbf{\authornameInEnglish}\\
 			\fSong \sXiaosan ~ \\
 			\fTNR \sXiaosan \textbf{Under the Supervision of Professor}\\
 			\fTNR \sXiaosan \textbf{Myself}
